solutions and explanations to PS3

--- a/problemsets_solutions/Problem_set_2.ipynb
+++ b/problemsets_solutions/Problem_set_2.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4   4  1.235904     1.111712"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "4   4  1.235904     1.111712  0.899513"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "7   7  2.475478     1.573365  0.635580"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "18  18  1.280235     1.131475  0.883802"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "5   5  0.662684  0.814054"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "4   4  0.156667  0.395811"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "9.0            0.194947"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
        "[3540 rows x 4 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
        "[708 rows x 4 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1791,7 @@
        "         real     1802968.5  2547923.0  3591186.0  4552586.0  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1888,7 @@
        "1955        I  nominal  1966    21134.0"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2135,40 +2135,40 @@
        "      <td>Total</td>\n",
        "      <td>Age, total</td>\n",
        "      <td>Total</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>4975653</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>5313577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Total</td>\n",
        "      <td>0 years</td>\n",
        "      <td>Total</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>74461</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>66205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Total</td>\n",
        "      <td>1 year</td>\n",
        "      <td>Total</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>70323</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>67983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Total</td>\n",
        "      <td>10 years</td>\n",
        "      <td>Total</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>74854</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>61241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Total</td>\n",
        "      <td>11 years</td>\n",
        "      <td>Total</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>74624</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>58580</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2176,11 +2176,11 @@
       ],
       "text/plain": [
        "     KØN       ALDER CIVILSTAND   TID  INDHOLD\n",
-       "0  Total  Age, total      Total  1972  4975653\n",
-       "1  Total     0 years      Total  1972    74461\n",
-       "2  Total      1 year      Total  1972    70323\n",
-       "3  Total    10 years      Total  1972    74854\n",
-       "4  Total    11 years      Total  1972    74624"
+       "0  Total  Age, total      Total  1999  5313577\n",
+       "1  Total     0 years      Total  1999    66205\n",
+       "2  Total      1 year      Total  1999    67983\n",
+       "3  Total    10 years      Total  1999    61241\n",
+       "4  Total    11 years      Total  1999    58580"
       ]
      },
      "metadata": {},
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2231,17 +2231,17 @@
        "      <td>5992734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3040</th>\n",
+       "      <th>3278</th>\n",
        "      <td>2024</td>\n",
        "      <td>5961249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>808</th>\n",
+       "      <th>1010</th>\n",
        "      <td>2023</td>\n",
        "      <td>5932654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5454</th>\n",
+       "      <th>5252</th>\n",
        "      <td>2022</td>\n",
        "      <td>5873420</td>\n",
        "    </tr>\n",
@@ -2257,13 +2257,13 @@
       "text/plain": [
        "      year  population\n",
        "4949  2025     5992734\n",
-       "3040  2024     5961249\n",
-       "808   2023     5932654\n",
-       "5454  2022     5873420\n",
+       "3278  2024     5961249\n",
+       "1010  2023     5932654\n",
+       "5252  2022     5873420\n",
        "5353  2021     5840045"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2284,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
        "647        G     real  2024   597071.0     5961249"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2572,7 @@
        "2024        G     real   597071.0     5961249         5961249"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2594,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2735,7 @@
        "707        G     real  2024   597071.0           3649206.0   5961249.0"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2768,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2817,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3079,7 +3079,7 @@
        "19        C  nominal  1967    69877.0    62576.0  1.116674         1.116674"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3096,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3112,6 +3112,147 @@
    ],
    "source": [
     "plot(nah1_alt,variable='index_transform')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>inc</th>\n",
+       "      <th>cons</th>\n",
+       "      <th>income_decile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.727981</td>\n",
+       "      <td>0.853218</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.276823</td>\n",
+       "      <td>0.276823</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.481931</td>\n",
+       "      <td>1.217346</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.235904</td>\n",
+       "      <td>1.111712</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.662684</td>\n",
+       "      <td>0.814054</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>93</td>\n",
+       "      <td>1.438376</td>\n",
+       "      <td>1.199323</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>94</td>\n",
+       "      <td>1.154685</td>\n",
+       "      <td>1.074563</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>95</td>\n",
+       "      <td>0.201856</td>\n",
+       "      <td>0.201856</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>98</td>\n",
+       "      <td>1.488635</td>\n",
+       "      <td>1.220096</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>99</td>\n",
+       "      <td>0.360234</td>\n",
+       "      <td>0.360234</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id       inc      cons  income_decile\n",
+       "0    0  0.727981  0.853218            4.0\n",
+       "2    2  0.276823  0.276823            0.0\n",
+       "3    3  1.481931  1.217346            9.0\n",
+       "4    4  1.235904  1.111712            8.0\n",
+       "5    5  0.662684  0.814054            4.0\n",
+       "..  ..       ...       ...            ...\n",
+       "93  93  1.438376  1.199323            9.0\n",
+       "94  94  1.154685  1.074563            7.0\n",
+       "95  95  0.201856  0.201856            NaN\n",
+       "98  98  1.488635  1.220096            9.0\n",
+       "99  99  0.360234  0.360234            0.0\n",
+       "\n",
+       "[70 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   }
  ],
