--- a/problemsets_solutions/problem_set_3_optimize.ipynb
+++ b/problemsets_solutions/problem_set_3_optimize.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "dc256bae",
    "metadata": {},
    "outputs": [],
@@ -104,10 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "352dbad1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# set autoreload so that changes in A*.py files are reflected without restarting the notebook\n",
     "# just a technicality, and not used in my (Casper) notebooks / solution - because i dont change modules\n",
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "f8382aa0",
    "metadata": {},
    "outputs": [],
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "9c4f561b",
    "metadata": {},
    "outputs": [
@@ -213,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "2ccbc359",
    "metadata": {},
    "outputs": [],
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "667ae293",
    "metadata": {},
    "outputs": [
@@ -299,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "2208348f",
    "metadata": {},
    "outputs": [],
@@ -315,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "8e8d6233",
    "metadata": {},
    "outputs": [
@@ -360,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "89d578c5",
    "metadata": {},
    "outputs": [],
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "a1150b76",
    "metadata": {},
    "outputs": [],
@@ -429,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "73609e7c",
    "metadata": {},
    "outputs": [
@@ -455,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "f540faa9",
    "metadata": {},
    "outputs": [],
@@ -520,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "d322f797",
    "metadata": {},
    "outputs": [],
@@ -552,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "aeb8ce5b",
    "metadata": {},
    "outputs": [
@@ -628,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "87b21128",
    "metadata": {},
    "outputs": [],
@@ -718,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "fe62f1b4",
    "metadata": {},
    "outputs": [
@@ -763,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "2f84c13f",
    "metadata": {},
    "outputs": [
@@ -816,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8b644aa1",
    "metadata": {},
    "outputs": [
@@ -868,7 +877,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SLSQP</td>\n",
-       "      <td>0.008131</td>\n",
+       "      <td>0.003511</td>\n",
        "      <td>4.987772</td>\n",
        "      <td>2.506114</td>\n",
        "      <td>3.535523</td>\n",
@@ -876,7 +885,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Nelder-Mead</td>\n",
-       "      <td>0.004418</td>\n",
+       "      <td>0.003435</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>2.500000</td>\n",
        "      <td>3.535534</td>\n",
@@ -889,11 +898,11 @@
        "        Method  Time (s)       x1*       x2*        u*\n",
        "0    Bisection        NA  4.999998  2.500001  3.535534\n",
        "1       Newton        NA  4.999998  2.500001  3.535534\n",
-       "2        SLSQP  0.008131  4.987772  2.506114  3.535523\n",
-       "3  Nelder-Mead  0.004418  5.000000  2.500000  3.535534"
+       "2        SLSQP  0.003511  4.987772  2.506114  3.535523\n",
+       "3  Nelder-Mead  0.003435  5.000000  2.500000  3.535534"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "0c02f007",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "e97efecf",
    "metadata": {},
    "outputs": [
